--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/preact": "^3.2.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.4",
     "astro": "^4.5.16",
+    "preact": "^10.20.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.4"
   }
